[package]
name = "dbs-project-34"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
env_logger = "0.10.1"
log = "0.4.20"
lru = "0.12.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
