[package]
name = "yoursql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
clap = { version = "4.4.14", features = ["derive"] }
console = "0.15.8"
env_logger = "0.10.1"
log = "0.4.20"
lru = "0.12.1"
pest = "2.7.6"
pest_derive = "2.7.6"
prettytable-rs = "0.10.0"
rustyline = "13.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
